--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Ethan LERIGAB - Portfolio</title>
 </head>
+
 <body>
     <header class="menu-bar">
         <img class="bk-logo" src="ressources/bk.png" alt="bk-logo">
@@ -20,26 +22,29 @@
             <li><a href="#">Contact & Résaux</a></li>
         </ul>
     </header>
-    <section class="section sprofil">
-
-    </section>
-    <section class="section sformation">
-
-    </section>
-    <section class="section scomp">
-
-    </section>
-    <section class="section sprojets">
-
-    </section>
-    <section class="section sgalerie">
-
-    </section>
-    <section class="section scontact">
-
-    </section>
-    <footer>
-
-    </footer>
+    <div class="page">
+        <section class="section sprofil">
+            profil
+        </section>
+        <section class="section sformation">
+            formation
+        </section>
+        <section class="section scomp">
+            compétences & affinités
+        </section>
+        <section class="section sprojets">
+            projets
+        </section>
+        <section class="section sgalerie">
+            galerie
+        </section>
+        <section class="section scontact">
+            contact & résaux
+        </section>
+        <footer>
+            
+        </footer>
+    </div>
 </body>
+
 </html>
