--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <header class="menu-bar">
         <img class="bk-logo" src="ressources/bk.png" alt="bk-logo">
-        <p>star</p>
+        <img class="star" src="ressources/star.png" alt="star">
         <h1 class="portfo">Portfolio - Ethan LERIGAB (BauKo.)</h1>
         <ul class="ancres">
-            <li><a href="#">Profil</a></li>
-            <li><a href="#">Formation</a></li>
-            <li><a href="#">Compétences & Affinités</a></li>
-            <li><a href="#">Projets</a></li>
-            <li><a href="#">Galerie</a></li>
+            <li><a href="#">Profil</a></li>|
+            <li><a href="#">Formation</a></li>|
+            <li><a href="#">Compétences & Affinités</a></li>|
+            <li><a href="#">Projets</a></li>|
+            <li><a href="#">Galerie</a></li>|
             <li><a href="#">Contact & Résaux</a></li>
         </ul>
     </header>
