--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Ethan LERIGAB - Portfolio</title>
+    <title>Ethan LERIGAB (BauKo.) - Portfolio</title>
 </head>
 
 <body>
     <header class="menu-bar">
-        <img class="bk-logo" src="ressources/bk.png" alt="bk-logo">
-        <img class="star" src="ressources/star.png" alt="star">
+        <img class="bk-logo" src="ressources/bk.png">
+        <img class="star" src="ressources/star.png">
         <h1 class="portfo">Portfolio - Ethan LERIGAB (BauKo.)</h1>
         <ul class="ancres">
             <li><a href="#">Profil</a></li>|
@@ -24,25 +24,132 @@
     </header>
     <div class="page">
         <section class="section sprofil">
-            profil
+            <h1>- Profil -</h1>
+            <div class="sc1-pg1 sc-page">
+                <img class="bauko-logo" src="ressources/bauko.png">
+                <div class="bjr-eth">
+                    <p>* Bonjour à tous ! Moi c'est Ethan.</p><br>
+                    <p>* Passionné d'art graphique de musiques et de jeux vidéos
+                        je suis déssinateur, compositeur de musique et bientôt développeur
+                        indépendant de jeux vidéos !
+                    </p>
+                </div>
+            </div>
+            <img src="ressources/inkcat1.png">
+
+            <div class="sc1-pg2 sc-page">
+                <div>
+                    <p>* Dans mon temps libre, j'adore créer ! Imaginer des mondes, écrire des histoires,
+                        faire de la musique, ou même dessiner. Ce sont LES choses que j'aime le plus faire au monde.
+                    </p>
+                    <p>* Mais j'ai aussi beaucoup d'objectifs, j'aimerais pouvoir pousser plus loin mes comptétences de
+                        création de digital art ainsi qu'en développement de jeux.
+                    </p>
+                </div>
+                <div>
+                    <img src="ressources/draw.png">
+                </div>
+            </div>
+
+            <div class="sc1-pg3 sc-page">
+                <div>
+                    <img src="ressources/blender.png">
+                    <img src="ressources/unity.png">
+                </div>
+                <p>* J'aimerai beaucoup par exemple apprendre la création de modèles et d'animations 3D (personnages ou
+                    environement)
+                    par Blender ou autres logiciels, et j'apprends actuellement à utiliser des moteurs de jeux comme
+                    Unity ou Godot Engine.</p>
+            </div>
         </section>
         <section class="section sformation">
-            formation
+            <h1>- Formation -</h1>
+            <div class="sc2-pg1 sc-page">
+                <div>
+                    <p>
+                        * J’ai effectué mes années collège dans l’établissement du Collège Lucie-AUBRAC de
+                        Clermont-Ferrand.
+                        J’y ai obtenu mon Brevet des collèges avec metion bien.</p>
+                    <p>
+                        * J’ai fais mes annés lycée au Lycée Lafayette de Clermont-Ferrand. J’ai fait un BAC Général
+                        Technologique en STI2D (Sciences et Technologies de l’Industrie et du Développement Durable)
+                        option
+                        ITEC (Innovation Technologique et Éco-Conception). J’ai eu mon bac avec mention assez bien !
+                    </p>
+                </div>
+                <p>
+                    * Je n’ai pas vraiment d’expérience professionnelle, si ce n’est qu’en 3ème j’ai effectué un stage
+                    d’observation à l’Agence Régionale de Santé de Clermont-Ferrand.
+                </p>
+            </div>
+            <div class="sc2-pg2 sc-page">
+                <img src="ressources/campus26.png">
+                <p>* Je suis actuellement en formation de développement web et web mobile.
+                    Cette formation consiste à me permettre de maitriser les languages essentiels à la création de pages
+                    web et à la gestion leur contenu. J'ai intégré cette formation pour me construire une base solide en
+                    développement et en programmation avec certains des langages les plus utilisés. Je suis également
+                    très intéressé par le développement web depuis que j'en ai fait dans mes années lycée, plus
+                    particulièrement la partie front-end et tout ce qui touche à l'html et au css !
+                </p>
+                <img src="ressources/inkcat2.png">
+            </div>
         </section>
         <section class="section scomp">
-            compétences & affinités
+            <h1>- Compétences & Affinités -</h1>
+            <div class="sc3-pg1 sc-page">
+                <div>
+                    <p>* Comptétences :</p>
+                    <ul>
+                        <li>Créatif</li>
+                        <li>Ouvert d'esprit</li>
+                        <li>Passionné</li>
+                        <li>Motivé</li>
+                    </ul>
+                </div>
+                <div>
+                    <p>* Mes affinités en langages de programmation sont les suivantes :</p>
+                    <ul>
+                        <li>HTML<div class="bar"><span class="progress html"></span></div>
+                        </li>
+                        <li>CSS</li>
+                        <div class="bar"><span class="progress css"></span></div>
+                        <li>PHP</li>
+                        <div class="bar"><span class="progress php"></span></div>
+                        <li>SQL</li>
+                        <div class="bar"><span class="progress sql"></span></div>
+                        <li>JAVASCRIPT</li>
+                        <div class="bar"><span class="progress js"></span></div>
+                        <li>C#</li>
+                        <div class="bar"><span class="progress cs"></span></div>
+                        <li>PYTHON</li>
+                        <div class="bar py-bar"><span class="progress py"></span></div>
+                    </ul>
+                </div>
+            </div>
         </section>
         <section class="section sprojets">
-            projets
+            <h1>- Projets -</h1>
+            <div>
+                <p>* J'ai pour projet d'accomplir la création d'un jeu du nom de "Midnight's Fable" dont je construit
+                    l'histoire, les personnages et
+                    les musiques depuis quelques annés. Je bâti aussi depuis 7 ans, l'univers de "LEGENDARY" une futur série de
+                    webcomics qui pourront être lisibles sur mon propre futur site web !
+                    Englobant donc la grande majorité de mes passions, ces deux principaux projets représentent beacoup
+                    pour moi.
+                    Ces passions me conduiront également à fonder avec mon frère notre studio de jeux vidéo indépendants
+                    afin de faire connaitre aux public, les dizaines d'autres histoires intéractives que nous avons
+                    passés des années à préparer/écrire.
+                </p>
+            </div>
         </section>
         <section class="section sgalerie">
-            galerie
+            <h1>- Galerie -</h1>
         </section>
         <section class="section scontact">
-            contact & résaux
+            <h1>- Contact & Résaux -</h1>
         </section>
         <footer>
-            
+
         </footer>
     </div>
 </body>
