--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="ressources/fav/favicon.ico">
     <title>Ethan LERIGAB (BauKo.) - Portfolio</title>
 </head>
 
@@ -107,10 +108,13 @@
                     </ul>
                 </div>
                 <div>
+                    <img src="ressources/wow.gif">
+                </div>
+                <div>
                     <p>* Mes affinités en langages de programmation sont les suivantes :</p>
                     <ul>
-                        <li>HTML<div class="bar"><span class="progress html"></span></div>
-                        </li>
+                        <li>HTML</li>
+                        <div class="bar"><span class="progress html"></span></div>
                         <li>CSS</li>
                         <div class="bar"><span class="progress css"></span></div>
                         <li>PHP</li>
@@ -132,7 +136,8 @@
             <div>
                 <p>* J'ai pour projet d'accomplir la création d'un jeu du nom de "Midnight's Fable" dont je construit
                     l'histoire, les personnages et
-                    les musiques depuis quelques annés. Je bâti aussi depuis 7 ans, l'univers de "LEGENDARY" une futur série de
+                    les musiques depuis quelques années. Je bâti aussi depuis 7 ans, l'univers de "LEGENDARY" une futur
+                    série de
                     webcomics qui pourront être lisibles sur mon propre futur site web !
                     Englobant donc la grande majorité de mes passions, ces deux principaux projets représentent beacoup
                     pour moi.
@@ -144,12 +149,32 @@
         </section>
         <section class="section sgalerie">
             <h1>- Galerie -</h1>
+            <div>
+                <p>* Voici un aperçu des certains de mes oeuvres :</p>
+                <div class="grid-container">
+                    <div class="item1">Header</div>
+                    <div class="item2">Menu</div>
+                    <div class="item3">Main</div>
+                    <div class="item4">Right</div>
+                    <div class="item5">Footer</div>
+                </div>
+            </div>
         </section>
         <section class="section scontact">
-            <h1>- Contact & Résaux -</h1>
+            <h1>- Contact & Résaux-</h1>
+            <div>
+                <p>* MAIL: ethanlerigab@gmail.com</p>
+                <p>* TÉL.: 07 67 08 21 95</p>
+                <p>* DISCORD: BauKo.#1414</p><br>
+                <p>* TWITTER: <a target="_blank" href="https://twitter.com/BauKoArt">@BauKoArt</a></p>
+                <p>* INSTAGRAM: <a target="_blank" href="https://www.instagram.com/bauko.art/">@bauko.art</a></p>
+                <p>* SOUNDCLOUD: <a target="_blank" href="https://soundcloud.com/bauko">BauKo.</a></p>
+            </div>
         </section>
         <footer>
-
+            <div>
+                <img src="ressources/dog.gif">
+            </div>
         </footer>
     </div>
 </body>
