--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
                 <img src="ressources/dog.gif">
             </div>
         </footer>
+        <embed src="ressources/BauKo_Outro.mp3" loop="true" autostart="true" width="2" height="0" hidden>
+            <audio controls autoplay hidden>
+                <source src="ressources/BauKo_Outro.mp3" type="audio/mp3">
+                Your browser does not support the audio element.
+            </audio>
     </div>
 </body>
 
