--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                 </div>
             </div>
-            <img src="ressources/inkcat1.png">
+            <img class="inkcat1" src="ressources/inkcat1.gif">
 
             <div class="sc1-pg2 sc-page">
                 <div>
@@ -48,7 +48,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="ressources/draw.png">
+                    <img class="draw" src="ressources/draw.png">
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                     très intéressé par le développement web depuis que j'en ai fait dans mes années lycée, plus
                     particulièrement la partie front-end et tout ce qui touche à l'html et au css !
                 </p>
-                <img src="ressources/inkcat2.png">
+                <img src="ressources/inkcat2.svg">
             </div>
         </section>
         <section class="section scomp">
@@ -112,7 +112,7 @@
                 </div>
                 <div>
                     <p>* Mes affinités en langages de programmation sont les suivantes :</p>
-                    <ul>
+                    <ul class="exception">
                         <li>HTML</li>
                         <div class="bar"><span class="progress html"></span></div>
                         <li>CSS</li>
@@ -133,7 +133,7 @@
         </section>
         <section class="section sprojets">
             <h1>- Projets -</h1>
-            <div>
+            <div class="sc4-pg1 sc-page">
                 <p>* J'ai pour projet d'accomplir la création d'un jeu du nom de "Midnight's Fable" dont je construit
                     l'histoire, les personnages et
                     les musiques depuis quelques années. Je bâti aussi depuis 7 ans, l'univers de "LEGENDARY" une futur
@@ -149,7 +149,7 @@
         </section>
         <section class="section sgalerie">
             <h1>- Galerie -</h1>
-            <div>
+            <div class="sc5-pg1 sc-page">
                 <p>* Voici un aperçu des certains de mes oeuvres :</p>
                 <div class="grid-container">
                     <div class="item1">Header</div>
@@ -162,7 +162,7 @@
         </section>
         <section class="section scontact">
             <h1>- Contact & Résaux-</h1>
-            <div>
+            <div class="sc6-pg1 sc-page">
                 <p>* MAIL: ethanlerigab@gmail.com</p>
                 <p>* TÉL.: 07 67 08 21 95</p>
                 <p>* DISCORD: BauKo.#1414</p><br>
