--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </p>
             </div>
             <div class="sc2-pg2 sc-page">
-                <img src="ressources/campus26.png">
+                <img class="campus26" src="ressources/campus26.png">
                 <p>* Je suis actuellement en formation de développement web et web mobile.
                     Cette formation consiste à me permettre de maitriser les languages essentiels à la création de pages
                     web et à la gestion leur contenu. J'ai intégré cette formation pour me construire une base solide en
@@ -94,25 +94,23 @@
                     très intéressé par le développement web depuis que j'en ai fait dans mes années lycée, plus
                     particulièrement la partie front-end et tout ce qui touche à l'html et au css !
                 </p>
-                <img src="ressources/inkcat2.svg">
+                <img class="inkcat2" src="ressources/inkcat2.svg">
             </div>
         </section>
         <section class="section scomp">
             <h1 id="sc3">- Compétences & Affinités -</h1>
             <div class="sc3-pg1 sc-page">
-                <div>
+                <div class="talent-box">
                     <p>* Comptétences :</p>
-                    <ul>
+                    <ul class="talents">
                         <li>Créatif</li>
                         <li>Ouvert d'esprit</li>
                         <li>Passionné</li>
                         <li>Motivé</li>
                     </ul>
                 </div>
-                <div>
-                    <img src="ressources/wow.gif">
-                </div>
-                <div>
+
+                <div class="affinity-box">
                     <p>* Mes affinités en langages de programmation sont les suivantes :</p>
                     <ul class="exception">
                         <li>HTML</li>
@@ -131,6 +129,9 @@
                         <div class="bar py-bar"><span class="progress py"></span></div>
                     </ul>
                 </div>
+            </div>
+            <div>
+                <img class="wow" src="ressources/wow.gif">
             </div>
         </section>
         <section class="section sprojets">
@@ -162,7 +163,7 @@
                                     <img src="ressources/carousel/fate.png">
                                 </div>
                                 <div class="carousel-controls">
-                                    <label for="img-4" class="prev-slide">
+                                    <label for="img-5" class="prev-slide">
                                         <span>&lsaquo;</span>
                                     </label>
                                     <label for="img-2" class="next-slide">
@@ -207,17 +208,30 @@
                                     <label for="img-3" class="prev-slide">
                                         <span>&lsaquo;</span>
                                     </label>
+                                    <label for="img-5" class="next-slide">
+                                        <span>&rsaquo;</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="slide-container">
+                                <div class="slide-image">
+                                    <img src="ressources/carousel/godot.png">
+                                </div>
+                                <div class="carousel-controls">
+                                    <label for="img-4" class="prev-slide">
+                                        <span>&lsaquo;</span>
+                                    </label>
                                     <label for="img-1" class="next-slide">
                                         <span>&rsaquo;</span>
                                     </label>
                                 </div>
                             </li>
-
                             <div class="carousel-dots">
                                 <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
                                 <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
                                 <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
                                 <label for="img-4" class="carousel-dot" id="img-dot-4"></label>
+                                <label for="img-5" class="carousel-dot" id="img-dot-5"></label>
                             </div>
                         </ul>
                     </div>
@@ -235,10 +249,13 @@
                 <p>* SOUNDCLOUD: <a target="_blank" href="https://soundcloud.com/bauko">BauKo.</a></p>
             </div>
         </section>
-        <footer>
+        <section>
             <div>
                 <img src="ressources/dog.gif">
             </div>
+        </section>
+        <footer>
+
         </footer>
     </div>
 </body>
