structure et css terminé

--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
             <div class="sc1-pg1 sc-page">
                 <img class="bauko-logo" src="ressources/bauko.png">
                 <div class="bjr-eth">
-                    <p>* Bonjour à tous ! Moi c'est Ethan.</p><br>
-                    <p>* Passionné d'art graphique de musiques et de jeux vidéos
-                        je suis déssinateur, compositeur de musique et bientôt développeur
+                    <p>* Bonjour à tous ! Je m'appelle Ethan !</p><br>
+                    <p>* J'ai 18 ans, et je suis passionné d'art graphique de musiques et de jeux vidéos.
+                        Je suis déssinateur, compositeur de musique et bientôt développeur
                         indépendant de jeux vidéos !
                     </p>
                 </div>
             </div>
             <div class="inkcat1"></div>
-            <!-- <img class="inkcat1" src="ressources/inkcat1.svg"> -->
 
             <div class="sc1-pg2 sc-page">
                 <div>
@@ -154,7 +153,7 @@
             <h1 id="sc5">- Galerie -</h1>
             <div class="sc5-pg1 sc-page">
                 <p>* Voici un aperçu des certains de mes travaux/work in progress :</p>
-                <div>
+                <div class="wips">
                     <div class="carousel">
                         <ul class="slides">
                             <input type="radio" name="radio-buttons" id="img-1" checked />
@@ -163,7 +162,7 @@
                                     <img src="ressources/carousel/fate.png">
                                 </div>
                                 <div class="carousel-controls">
-                                    <label for="img-5" class="prev-slide">
+                                    <label for="img-7" class="prev-slide">
                                         <span>&lsaquo;</span>
                                     </label>
                                     <label for="img-2" class="next-slide">
@@ -213,12 +212,41 @@
                                     </label>
                                 </div>
                             </li>
+                            <input type="radio" name="radio-buttons" id="img-5" />
                             <li class="slide-container">
                                 <div class="slide-image">
                                     <img src="ressources/carousel/godot.png">
                                 </div>
                                 <div class="carousel-controls">
                                     <label for="img-4" class="prev-slide">
+                                        <span>&lsaquo;</span>
+                                    </label>
+                                    <label for="img-6" class="next-slide">
+                                        <span>&rsaquo;</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <input type="radio" name="radio-buttons" id="img-6" />
+                            <li class="slide-container">
+                                <div class="slide-image">
+                                    <img src="ressources/carousel/blender2.png">
+                                </div>
+                                <div class="carousel-controls">
+                                    <label for="img-5" class="prev-slide">
+                                        <span>&lsaquo;</span>
+                                    </label>
+                                    <label for="img-7" class="next-slide">
+                                        <span>&rsaquo;</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <input type="radio" name="radio-buttons" id="img-7" />
+                            <li class="slide-container">
+                                <div class="slide-image">
+                                    <img src="ressources/carousel/nocturne.png">
+                                </div>
+                                <div class="carousel-controls">
+                                    <label for="img-6" class="prev-slide">
                                         <span>&lsaquo;</span>
                                     </label>
                                     <label for="img-1" class="next-slide">
@@ -232,8 +260,29 @@
                                 <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
                                 <label for="img-4" class="carousel-dot" id="img-dot-4"></label>
                                 <label for="img-5" class="carousel-dot" id="img-dot-5"></label>
+                                <label for="img-6" class="carousel-dot" id="img-dot-6"></label>
+                                <label for="img-7" class="carousel-dot" id="img-dot-7"></label>
                             </div>
                         </ul>
+                    </div>
+                    <div class="music">
+                        <p>* Et voilà quelques musiques de mon projet de jeu "Midnight's Fable" :</p>
+                        <audio controls>
+                            <source src="/ressources/music/enemy.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                        <audio controls>
+                            <source src="/ressources/music/kingdom.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                        <audio controls>
+                            <source src="/ressources/music/fall.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                        <audio controls>
+                            <source src="/ressources/music/boss1.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
                     </div>
                 </div>
             </div>
@@ -251,11 +300,11 @@
         </section>
         <section>
             <div>
-                <img src="ressources/dog.gif">
+                <img class="dog" src="ressources/dog.gif">
             </div>
         </section>
         <footer>
-
+            <p class="uwu">-( •̀ ω •́ )✧-</p>
         </footer>
     </div>
 </body>
