--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
         <img class="star" src="ressources/star.png">
         <h1 class="portfo">Portfolio - Ethan LERIGAB (BauKo.)</h1>
         <ul class="ancres">
-            <li><a href="#sc1">Profil</a></li>|
-            <li><a href="#sc2">Formation</a></li>|
-            <li><a href="#sc3">Compétences & Affinités</a></li>|
-            <li><a href="#sc4">Projets</a></li>|
-            <li><a href="#sc5">Galerie</a></li>|
-            <li><a href="#sc6">Contact & Résaux</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc1">Profil</a></li>|
+            <li class="nav-item"><a class="nav-link" href="#sc2">Formation</a></li>|
+            <li class="nav-item"><a class="nav-link" href="#sc3">Compétences & Affinités</a></li>|
+            <li class="nav-item"><a class="nav-link" href="#sc4">Projets</a></li>|
+            <li class="nav-item"><a class="nav-link" href="#sc5">Galerie</a></li>|
+            <li class="nav-item"><a class="nav-link" href="#sc6">Contact & Résaux</a></li>
         </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </header>
     <div class="page">
         <section class="section sprofil">
@@ -307,6 +312,7 @@
             <p class="uwu">-( •̀ ω •́ )✧-</p>
         </footer>
     </div>
+    <script src="script.js" async defer></script>
 </body>
 
 </html>
