--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <img class="star" src="ressources/star.png">
         <h1 class="portfo">Portfolio - Ethan LERIGAB (BauKo.)</h1>
         <ul class="ancres">
-            <li class="nav-item"><a class="nav-link" href="#sc1">Profil</a></li>|
-            <li class="nav-item"><a class="nav-link" href="#sc2">Formation</a></li>|
-            <li class="nav-item"><a class="nav-link" href="#sc3">Compétences & Affinités</a></li>|
-            <li class="nav-item"><a class="nav-link" href="#sc4">Projets</a></li>|
-            <li class="nav-item"><a class="nav-link" href="#sc5">Galerie</a></li>|
+            <li class="nav-item"><a class="nav-link" href="#sc1">Profil</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc2">Formation</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc3">Compétences & Affinités</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc4">Projets</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc5">Galerie</a></li>
             <li class="nav-item"><a class="nav-link" href="#sc6">Contact & Résaux</a></li>
         </ul>
         <div class="hamburger">
